--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CIS350_Final_Project</string>
     <string name="action_settings">Settings</string>
+    <string name="MAIN_BTN_Karthic">Karthics Button</string>
 </resources>
