--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CIS350_Final_Project</string>
     <string name="action_settings">Settings</string>
     <string name="MAIN_BTN_Karthic">Karthics Button</string>
+    <string name="title_activity__karthic">Activity_Karthic</string>
 </resources>
